# m1

./: .flake8  LICENSE  README.md  aws_credentials.sh  h  pyproject.toml  release.sh
a_other/: 3_ways_to_run_wsgi.py  describe_vpc.sh  docker_from_ubuntu  engine_with_process_queues.py  flask_file_downloads.py  from_telegram_tests.py  index.html  keys.py  logging_config.yml  signal.py
app/: Dockerfile  (+1 more)
app/core-service/: .~c9_invoke_cfp7L6.py  copy_to_s3.py  core_service.py  flask_venv_runner.run  gunicorn.conf.py  gunicorn.sh  old_requirements.txt  pyproject.toml  requirements.txt  run.py  run_old.py  table_client.py  test-response.json
app/core-service/core/: .~c9_invoke_0MN7cs.py  .~c9_invoke_0mclIi.py  .~c9_invoke_36SLMe.py  .~c9_invoke_3YgUAg.py  .~c9_invoke_8uzgwO.py  .~c9_invoke_9Esa1o.py  .~c9_invoke_CNllB8.py  .~c9_invoke_D0bZgS.py  .~c9_invoke_HexWg.py  .~c9_invoke_KdGWdf.py  .~c9_invoke_LMOm9M.py  .~c9_invoke_TikJKP.py  .~c9_invoke_fBTcSR.py  .~c9_invoke_g2pBef.py  .~c9_invoke_m55u3Z.py  .~c9_invoke_stp2G.py  .~c9_invoke_uDRm0g.py  .~c9_invoke_wKx3r9.py  __init__.py  app.py  auth.py  bernvaz.py  boto3_users.py  cognito.py  config.py  db.py  dynamo.py  egcd.py  engine.py  env_template  facebook.py  facebook_users_to_cognito.py  fb.py  http_request.py  main.py  models.py  routes.py  run.py  runner.py  sqs.py  (+4 more)
app/core-service/core/a_tests/: tests.py
app/core-service/core/algorithms/: .~c9_invoke_1tMDYz.py  .~c9_invoke_8ZQMn.py  .~c9_invoke_pI0EBF.py  .~c9_invoke_rSuJj.py  ae_utils.py  amplitude_estimation.py  bb84.py  bernvaz.py  counting.py  counting_other.py  dj.py  egcd.py  grover.py  grover_sudoku.py  iqae.py  iqae_full.py  iqae_reference.py  qae.py  qft.py  qiskit_grover.py  qpe.py  run_counting.py  run_shor.py  shor.py  shor_basic.py  shor_classical.py  shor_new.py  shor_reference.py  simon.py  teleport.py  walk.py  walk_reference.py
app/core-service/core/algorithms/runners/: run_bb84.py  run_counting.py  run_iqae.py  run_qae.py  run_shor.py  run_walk.py
app/core-service/core/configuration/: gunicorn.py
app/core-service/core/gunicorn/: app.py  config.py
app/core-service/core/old/: secret.html
app/core-service/core/static/: env_example  env_template
app/core-service/core/static/figures/: README.md
app/core-service/core/static/logs/: README.md  core.log.1  core.log.2  core.log.3  core.log.4  core.log.5  gunicorn.log.1
app/core-service/core/templates/: admin.html  algorithm.html  algorithms.html  base.html  home.html  login.html  login_modal.html  task.html  tasks.html  tasks_example.html  tutorial.html
app/core-service/tests/: run_tests.py  test_cognito.py  test_facebook.py  test_runner.py
(+72 files in other folders)
