[build-system]

    requires = ["setuptools"]
    build-backend = "setuptools.build_meta"

[project]

    name = "m1"
    description = "M1 Project runs quantum algorithms."
    readme = "README.md"
    authors = [{ name = "Mykhailo Ohorodnikov", email = "mykhailo.ohorodnikov@gmail.com" }]
    license = { file = "LICENSE" }
    version = "1.18"
    requires-python = ">= 3.10"
    dependencies = [
    	"qiskit <= 1.3.2",
    	"qiskit-aer <= 0.16.0",
    	"qiskit-ibm-runtime <= 0.34.0",
    	"boto3 <= 1.36.3",
    	"flask <= 3.1.0",
    	"flask_cors <= 5.0.0",
    	"gunicorn <= 23.0.0",
    	"python-dotenv <= 1.0.1",
    	"matplotlib <= 3.10.0",
    	"pyTelegramBotAPI <= 4.26.0"
    ]
    keywords = ["m1", "quantum", "quantum computing", "quantum algorithm"]
    classifiers = [
        "Programming Language :: Python :: 3",
        "Operating System :: OS Independent",
        "License :: OSI Approved :: MIT License",
    ]

[project.urls]
    Homepage = "https://github.com/ogorodnikov/m1#readme"

[project.optional-dependencies]

    testing = ["pytest <= 8.3.4",
    		   "coverage <= 7.3.2",
    		   "flake8 <= 7.1.1"]

[tool.setuptools.packages.find]

    include = ["m1"]

[tool.pytest.ini_options]

    filterwarnings = [
        "ignore::DeprecationWarning",
        "ignore::PendingDeprecationWarning"]